[project]
name = "jarvis-mobile"
version = "0.1.0"
dependencies = [
    "flet",
    "gTTS",
    "flet-audio",
    "flet-audio-recorder",
    "google-generativeai",
    "wikipedia",
    "requests"
]

[tool.flet.android]
package_name = "com.parth.jarvis"
permissions = ["RECORD_AUDIO", "INTERNET"]
